# my-gpt

./: .gitignore  README.md  pyproject.toml
data/: avatar_script.txt  harry_potter.txt
mygpt/: __init__.py  attention.py  attention_blocks.py  config.py  data_processor.py  defaults.py  gpt.py  positional_encodings.py  tokenizers.py  transformer.py  utils.py
mygpt/entrypoints/: __init__.py  generate.py  train.py
